# spark-ml

./: main.py  pyproject.toml
data/: patients.csv
