[tool.poetry]
name = "spark-ml"
version = "0.1.0"
description = ""
authors = ["eugepineiro <epineiro@itba.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
